5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1662_2971.log
== TEST (2019-04-15 15:07:59) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
qo= 1.500.00

from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print("Sim")
	
else :
	print("Nao")
-- ERROR:
File "XXXX", line 3
    qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:20) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
qo= 1.500.00
t=36
from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print("Sim")
	
else :
	print("Nao")
-- ERROR:
File "XXXX", line 3
    qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:11) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
Qo= 1.500.00
t=5.350.00
from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print("Sim")
	
else :
	print("Nao")
-- ERROR:
File "XXXX", line 3
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:10:16) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
Qo= 1.500.00
t=5.350.00
from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print("Sim")
	
else :
	print("Nao")
-- EXECUTION TIME:
0.157271
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 3
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:16) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
Qo= 1.500.00
t=5.350.00
from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print("Sim")
	
else :
	print("Nao")
-- ERROR:
File "XXXX", line 3
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:19) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
Qo= 1.500.00

from math import*

Qf= qo * (1 + j) ** t

if (Qf) :
	print(round(qf, 2) ,"Sim")
	
else :
	print((round(Qf, 2)"Nao")
-- ERROR:
File "XXXX", line 3
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:27) 
-- CODE:
j=input("taxa de juros :")
vp=int(input("valor do apartamento :"))
Qo= 1.500.00

from math import*

Qf= Qo * (1 + j) ** t

if (Qf) :
	print(round(qf, 2) ,"Sim")
	
else :
	print((round(Qf, 2)"Nao")
-- ERROR:
File "XXXX", line 3
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:20) 
-- CODE:
tj=input("taxa de juros :")
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf)
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 10
    if (vp <= Qf)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:37) 
-- CODE:
tj=input("taxa de juros :")
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * (( 1 + tj) ** t)

if (vp <= Qf)
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 10
    if (vp <= Qf)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:20) 
-- CODE:
tj=input("taxa de juros :")
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * (( 1 + tj) ** t)

if (vp >= Qf)
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 10
    if (vp >= Qf)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:44) 
-- CODE:
tj=input("taxa de juros :")
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp  Qf)
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 10
    if (vp  Qf)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:57) 
-- CODE:
tj=input("taxa de juros :")
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Qf= Qo * ( 1 + tj) ** t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:25) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:36) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- EXECUTION TIME:
0.15787
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365.5 Nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229.73 Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063.2 Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:42) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * (( 1 + tj) ** t)

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:01) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * (( 1 + tj) ** t)

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:06) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * (( 1 + tj) ** t)

if (vp<=Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:55) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp >= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:13) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:37) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:43) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:45) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:46) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:46) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:46) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:47) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500.00
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
File "XXXX", line 5
    Qo= 1.500.00
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:51) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:15) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500000
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:40) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo * ( 1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:19) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= (Qo * (( 1 + tj) ** t))

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:10) 
-- CODE:
tj=int(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= (Qo * (( 1 + tj) ** t))

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tj=int(input())
ValueError: invalid literal for int() with base 10: '0.29'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:35) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= (Qo * (( 1 + tj) ** t))

if (vp <= Qf) :
	print(round(Qf, 2),"Sim")
	
else :
	print(round(Qf,2), "Nao")
-- OUTPUT:
14365.5 Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:39) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= (Qo * (( 1 + tj) ** t))

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:08) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= (Qo *  (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- ERROR:
File "XXXX", line 10
    if (vp <= Qf) :
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:12) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo *  (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:39:22) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo= 1.500
t= 36

Qf= Qo *  (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- EXECUTION TIME:
0.215953
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365.5
Nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229.73
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063.2
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:37) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
Qo=1.500000
t= 36

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:48) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
t= 36

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Qf= Qo * (1 + tj) ** t
NameError: name 'Qo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:31) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=float(input("valor do apartamento :"))

from math import *
t= 36
Qo=1.500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:15) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1.500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:50) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1.500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	msg=Qf
	print(round(Qf, 2))
	print("Sim")
	
else :
	msg=Qf
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365.5
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:00) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	msg=Qf
	print(round(Qf, 2))
	print("Sim")
	
else :
	msg=Qf
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365502757.13
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:47:07) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	msg=Qf
	print(round(Qf, 2))
	print("Sim")
	
else :
	msg=Qf
	print(round(Qf,2))
	print("Nao")
-- EXECUTION TIME:
0.15244
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502757.13
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727777.9
Sim
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202812.48
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:08) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	msg=Qf
	print(round(Qf, 2))
	print("Sim")
	
else :
	msg=Qf
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365502757.13
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:36) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500000

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365502757.13
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:24) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500000

Qf= Qo * ((1 + tj) ** t)

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365502757.13
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:13) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:49:21) 
-- CODE:
tj=float(input("taxa de juros :"))
vp=int(input("valor do apartamento :"))

from math import *
t= 36
Qo=1500

Qf= Qo * (1 + tj) ** t

if (vp <= Qf) :
	print(round(Qf, 2))
	print("Sim")
	
else :
	print(round(Qf,2))
	print("Nao")
-- EXECUTION TIME:
0.160799
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
